--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for ExtUtils-BuildRC
 
 {{$NEXT}}
+          Demand ExtUtils::Helpers 0.006
 
 0.002     2011-03-28 15:12:13 Europe/Amsterdam
           use ExtUtils::Helpers's split_like_shell for platform correct behavior
